--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,24 @@ section.hero {
 
 input[type="email"],
 input[type="password"],
-input[type="text"] {
+input[type="text"],
+input[type="tel"] {
   @apply block w-full my-2 rounded-xl;
   @apply border p-2 border-gray-300 bg-gray-200;
 }
 input[type="email"]:disabled,
 input[type="password"]:disabled,
+input[type="tel"]:disabled,
 input[type="text"]:disabled {
   @apply bg-gray-100 border-0 text-gray-500;
+}
+
+label {
+  @apply text-gray-500 text-sm leading-tight;
+}
+
+label + input {
+  margin-top: -2px !important;
 }
 
 button {
@@ -32,4 +42,12 @@ button[type="submit"],
 button[type="submit"]:disabled,
 .submit:disabled {
   @apply cursor-progress bg-red-400;
+}
+
+div.tabs > * {
+  @apply bg-gray-300 text-gray-700 rounded-full py-2 px-4;
+}
+
+div.tabs > *.active {
+  @apply bg-primary text-white;
 }
