--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,14 +29,15 @@ label + input {
   margin-top: -2px !important;
 }
 
-button {
-  @apply block w-full text-gray-700 font-semibold;
+button,
+.button {
+  @apply flex w-full justify-center text-gray-700 font-semibold;
   @apply border rounded-xl border-gray-300 px-6 py-2;
 }
 
 button[type="submit"],
 .submit {
-  @apply border-0 w-full bg-primary text-white;
+  @apply border-primary w-full bg-primary text-white;
 }
 
 button[type="submit"]:disabled,
