--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ label + input {
 
 button,
 .button {
-  @apply flex w-full justify-center text-gray-700 font-semibold;
+  @apply flex w-full justify-center gap-2 text-gray-700 font-semibold;
   @apply border rounded-xl border-gray-300 px-6 py-2;
 }
 
